<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    android:layout_margin="16dp"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bus_id"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_BusID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bus_id"
                android:textColor="@color/black"
                android:layout_marginStart="34dp"
                android:textSize="20sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/rv_img_busDelete"
                    android:layout_width="37dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/delete_image_recycler_view" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/driver_id"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_DriverID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/driver_id"
                android:textColor="@color/black"
                android:layout_marginStart="15dp"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/driver_name"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_DriverName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/driver_name"
                android:textColor="@color/black"
                android:layout_marginStart="15dp"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seat_availability"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_SeatAvailability"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seat_availability"
                android:textColor="@color/black"
                android:layout_marginStart="15dp"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>