<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/admin_console_bg"
    android:orientation="vertical"
    tools:context=".AdminConsoleActivity">


    <View
        android:id="@+id/rectangle_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-40dp"
        android:background="@drawable/admin_console_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_admin_console"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/fonts"
        android:gravity="center_horizontal"
        android:text="@string/admin_console"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.228" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="348dp"
        android:layout_height="101dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/vitlogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rectangle_1" />

    <ImageView
        android:id="@+id/iv_registration"
        android:layout_width="70dp"
        android:layout_height="61dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/registration_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <TextView
        android:id="@+id/tv_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:fontFamily="@font/fonts"
        android:gravity="center_horizontal|top"
        android:text="@string/registration"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_registration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.422"
        app:layout_constraintStart_toEndOf="@+id/iv_registration"
        app:layout_constraintTop_toTopOf="@+id/iv_registration"
        app:layout_constraintVertical_bias="0.555" />

    <TextView
        android:id="@+id/tv_qr_generator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fonts"
        android:text="@string/qr_generator"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_qr_generator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_qr_generator"
        app:layout_constraintTop_toTopOf="@+id/iv_qr_generator" />

    <TextView
        android:id="@+id/tv_manage_buses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fonts"
        android:text="@string/manage_buses"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_manage_buses"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_manage_buses"
        app:layout_constraintTop_toTopOf="@+id/iv_manage_buses" />

    <ImageView
        android:id="@+id/iv_qr_generator"
        android:layout_width="73dp"
        android:layout_height="68dp"
        android:layout_marginTop="36dp"
        android:src="@drawable/qr_generator_logo"
        app:layout_constraintEnd_toEndOf="@+id/iv_registration"
        app:layout_constraintStart_toStartOf="@+id/iv_registration"
        app:layout_constraintTop_toBottomOf="@+id/iv_registration" />

    <ImageView
        android:id="@+id/iv_manage_buses"
        android:layout_width="72dp"
        android:layout_height="78dp"
        android:layout_marginTop="48dp"
        android:src="@drawable/manage_buses_logo"
        app:layout_constraintEnd_toEndOf="@+id/iv_qr_generator"
        app:layout_constraintHorizontal_bias="0.984"
        app:layout_constraintStart_toStartOf="@+id/iv_qr_generator"
        app:layout_constraintTop_toBottomOf="@+id/iv_qr_generator" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.39" />


</androidx.constraintlayout.widget.ConstraintLayout>