<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/student_console_bg"
    tools:context=".StudentConsoleActivity">

    <View
        android:id="@+id/rectangle_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-39dp"
        android:background="@drawable/student_console_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/student_console"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:fontFamily="@font/fonts"
        android:gravity="center_horizontal"
        android:text="@string/student_console"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="348dp"
        android:layout_height="101dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/vitlogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rectangle_1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="233dp" />

    <ImageView
        android:id="@+id/iv_track_bus_logo"
        android:layout_width="48dp"
        android:layout_height="56dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="36dp"
        android:src="@drawable/track_bus_student"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <TextView
        android:id="@+id/track_bus"
        android:layout_width="208dp"
        android:layout_height="42dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:fontFamily="@font/fonts"
        android:gravity="center_horizontal|top"
        android:text="@string/track_bus"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_track_bus_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/iv_track_bus_logo"
        app:layout_constraintTop_toTopOf="@+id/iv_track_bus_logo" />

    <ImageView
        android:id="@+id/iv_qr_scan"
        android:layout_width="53dp"
        android:layout_height="46dp"
        android:layout_marginTop="44dp"
        android:src="@drawable/qr_scanner_student"
        app:layout_constraintEnd_toEndOf="@+id/iv_track_bus_logo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/iv_track_bus_logo"
        app:layout_constraintTop_toBottomOf="@+id/iv_track_bus_logo" />

    <TextView
        android:id="@+id/tv_qr_scan"
        android:layout_width="208dp"
        android:layout_height="42dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:fontFamily="@font/fonts"
        android:gravity="center_horizontal|top"
        android:text="@string/qr_scan"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_qr_scan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/iv_qr_scan"
        app:layout_constraintTop_toTopOf="@+id/iv_qr_scan"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>